--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "isomorphic-fetch": "^2.2.1",
     "limax": "^1.3.0",
     "mongoose": "^4.4.20",
+    "mongoose-type-email": "^1.0.5",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-helmet": "^3.1.0",
