--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "mongoose": "^4.4.20",
     "mongoose-type-email": "^1.0.5",
     "react": "^15.1.0",
+    "react-bootstrap": "^0.31.3",
     "react-dom": "^15.1.0",
     "react-helmet": "^3.1.0",
     "react-intl": "^2.1.2",
