--- a/package.json
+++ b/package.json
@@ -43,8 +43,10 @@
     "limax": "^1.3.0",
     "mongoose": "^4.4.20",
     "mongoose-type-email": "^1.0.5",
+    "passport": "^0.4.0",
+    "passport-google-oauth20": "^1.0.0",
     "react": "^15.1.0",
-	"react-bootstrap": "^0.31.3",
+    "react-bootstrap": "^0.31.3",
     "react-dom": "^15.1.0",
     "react-helmet": "^3.1.0",
     "react-intl": "^2.1.2",
