--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "intl-locales-supported": "^1.0.0",
     "isomorphic-fetch": "^2.2.1",
     "limax": "^1.3.0",
+    "material-ui": "^0.19.2",
     "mongoose": "^4.4.20",
     "mongoose-type-email": "^1.0.5",
     "passport": "^0.4.0",
