--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "limax": "^1.3.0",
     "mongoose": "^4.4.20",
     "mongoose-type-email": "^1.0.5",
+    "multer": "^1.3.0",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0",
     "react": "^15.1.0",
