--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "cross-env": "^1.0.8",
     "cuid": "^1.3.8",
     "express": "^4.13.4",
+    "fs-extra": "^4.0.2",
     "intl": "^1.2.4",
     "intl-locales-supported": "^1.0.0",
     "isomorphic-fetch": "^2.2.1",
