--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "intl": "^1.2.4",
     "intl-locales-supported": "^1.0.0",
     "isomorphic-fetch": "^2.2.1",
+    "last-line": "0.0.3",
     "limax": "^1.3.0",
     "material-ui": "^0.19.2",
     "mongoose": "^4.4.20",
@@ -58,6 +59,7 @@
     "react-intl": "^2.1.2",
     "react-redux": "^4.4.5",
     "react-router": "^2.4.1",
+    "read-last-lines": "^1.2.0",
     "redux": "^3.5.2",
     "redux-thunk": "^2.1.0",
     "sanitize-html": "^1.11.4"
