--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-intl": "^2.1.2",
     "react-redux": "^4.4.5",
     "react-router": "^2.4.1",
+    "react-table": "^6.6.0",
     "read-last-lines": "^1.2.0",
     "redux": "^3.5.2",
     "redux-thunk": "^2.1.0",
